[package]
edition = "2024"
name    = "bevy-c6"
version = "0.1.0"

[[bin]]
name = "bevy-c6"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc        = "0.7.0"
esp-hal          = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
esp-hal-embassy  = { version = "0.7.0", features = ["esp32c6"] }
esp-println      = { version = "0.13.0", features = ["esp32c6", "log"] }
log              = { version = "0.4.21" }
static_cell      = { version = "2.1.0", features = ["nightly"] }

#bevy_app = { version = "0.15.3", default-features = false, features = ["bevy_reflect"] }
# bevy_color = { git = "https://github.com/bevyengine/bevy.git", default-features = false }
#bevy_ecs = { version = "0.15", default-features = false, features = ["no_std"] }
#bevy_utils = { version = "0.15", default-features = false, features = ["no_std"] }
#bevy_tasks = { version = "0.15", default-features = false, features = ["no_std"] }

glam = { version = "0.30.0", default-features = false, features = ["scalar-math", "libm"] }

# [patch.crates-io]
# glam = { git = "https://github.com/yourusername/glam.git", branch = "scalar-math" }



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
